# recorditnow

./: CMakeLists.txt  DEPENDENCIES  INSTALL  TODO.txt  install.sh  recorditnow.desktop  recorditnow.notifyrc  recorditnow_snapshot.desktop  suse.txt  ubuntu.txt
src/: CMakeLists.txt  application.cpp  application.h  checkicon.cpp  config-recorditnow.h.cmake  configdialog.cpp  configdialog.h  configitem.cpp  configitem.h  cursorwidget.cpp  cursorwidget.h  devicemanager.cpp  devicemanager.h  devicesearchdialog.cpp  devicesearchdialog.h  devicesearchwidget.cpp  devicesearchwidget.h  dockwidget.cpp  dockwidget.h  encodermanager.cpp  encodermanager.h  framebox.cpp  framebox.h  frameconfig.cpp  frameconfig.h  helper.cpp  helper.h  keymondialog.cpp  keymondialog.h  keymonmanager.cpp  keymonmanager.h  line.cpp  line.h  listlayout.cpp  listlayout.h  listlayoutrow.cpp  listlayoutrow.h  main.cpp  mainwindow.cpp  mainwindow.h  (+48 more)
src/collection/: collection.cpp  collection.h  collection_p.h  collectionitem.cpp  collectionitem.h  collectionitem_p.h
src/config/: colorrow.cpp  colorrow.h  configdialog.cpp  configdialog.h  configosd.cpp  configosd.h  configpage.cpp  configpage.h  frameconfig.cpp  frameconfig.h  framerow.cpp  framerow.h  keyboardconfig.cpp  keyboardconfig.h  keyboardkeyiconpage.cpp  keyboardkeyiconpage.h  keyboardkeypage.cpp  keyboardkeypage.h  keyboardrow.cpp  keyboardrow.h  keyboardwizard.cpp  keyboardwizard.h  mousebuttonwidget.cpp  mousebuttonwidget.h  mouseconfig.cpp  mouseconfig.h  notificationconfig.cpp  notificationconfig.h  playerconfig.cpp  playerconfig.h  pluginconfig.cpp  pluginconfig.h  scriptdialog.cpp  scriptdialog.h  shortcutsconfig.cpp  shortcutsconfig.h  soundrow.cpp  soundrow.h  timelineconfig.cpp  timelineconfig.h  (+4 more)
src/config/ui/: frameconfig.ui  keyboardconfig.ui  mouseconfig.ui  notificationconfig.ui  playerconfig.ui  pluginconfig.ui  scriptdialog.ui  settings.ui  timelineconfig.ui  zoom.ui
src/devicekeylogger/: CMakeLists.txt  devicekeylogger.cpp  devicekeylogger.h  devicesearchdialog.cpp  devicesearchdialog.h  devicesearchwidget.cpp  devicesearchwidget.h  manager.cpp
src/devicekeylogger/keymon/: CMakeLists.txt  device.cpp  device.h  devicehelper.cpp  devicehelper.h
src/devicekeylogger/ui/: devicewidget.ui
src/firstStart/: createconfigpage.cpp  createconfigpage.h  firststartassistant.cpp  firststartassistant.h  keyboarddevicepage.cpp  keyboarddevicepage.h  mousedevicepage.cpp  mousedevicepage.h  welcomepage.cpp  welcomepage.h
src/firstStart/ui/: welcomepage.ui  (+3 more)
src/fixperm/: CMakeLists.txt  device.cpp  device.h  main.cpp
src/frame/: frame.cpp  frame.h  frameinfowidget.cpp  frameinfowidget.h  framesize.cpp  framesize.h  movewidget.cpp  movewidget.h
src/keyboard/: CMakeLists.txt  flowlayout.cpp  flowlayout.h  keyboarddock.cpp  keyboarddock.h  keyboardkey.cpp  keyboardkey.h  keyloggerlabel.cpp  keyloggerlabel.h  keyloggerosd.cpp  keyloggerosd.h  keyloggerwidget.cpp  keyloggerwidget.h  keywidget.cpp  keywidget.h  proxylayout.cpp
src/keymon/: CMakeLists.txt  device.cpp  device.h  devicehelper.cpp  devicehelper.h  deviceinfo.cpp  deviceinfo.h  event.h  helper.actions  manager.cpp  manager.h
src/kipi/: kipiinterface.cpp  kipiinterface.h
src/libs/: CMakeLists.txt
src/mouse/: cursorwidget.cpp  cursorwidget.h  mousebutton.cpp  mousebutton.h
src/player/: abstractplayer.cpp  abstractplayer.h  imageframe.cpp  imageframe.h  imageplayer.cpp  imageplayer.h  playerdock.cpp  playerdock.h  playerdocktitle.cpp  playerdocktitle.h  videoplayer.cpp  videoplayer.h  volumeslider.cpp  volumeslider.h
src/plugins/: CMakeLists.txt
src/recordkeylogger/: CMakeLists.txt  recordkeylogger.cpp  recordkeylogger.h  recordkeylogger_p.h
src/script/: CMakeLists.txt  configscriptadaptor.cpp  configscriptadaptor.h  debugscriptadaptor.cpp  debugscriptadaptor.h  encoderscriptadaptor.cpp  encoderscriptadaptor.h  mainwindowscriptadaptor.cpp  mainwindowscriptadaptor.h  recorderscriptadaptor.cpp  recorderscriptadaptor.h  recorditnow_script.desktop  recorditnow_script_export.h  script.cpp  script.h  scriptimporter.cpp  scriptimporter.h  scriptmanager.cpp  scriptmanager.h
src/snoop/: CMakeLists.txt  device.cpp  device.h  devicehelper.cpp  devicehelper.h  event.cpp  event.h  manager.cpp  manager.h
src/tests/: CMakeLists.txt  configitemtest.cpp  configitemtest.h  plugintest.cpp  plugintest.h
src/timeline/: timeline.cpp  timeline.h  timelinedock.cpp  timelinedock.h  timelinetopicsdialog.cpp  timelinetopicsdialog.h  topic.cpp  topic.h  topicprogressbar.cpp  topicprogressbar.h  topicwidget.cpp  topicwidget.h
src/ui/: devicesearchdialog.ui  devicesearchwidget.ui  encoderplugins.ui  frameconfig.ui  keyboardconfig.ui  keyboarddock.ui  keyboarddocktitlewidget.ui  keyboardkeyiconpage.ui  keyboardkeypage.ui  keymondialog.ui  mainwindow.ui  mouse.ui  mouseconfig.ui  outputwidget.ui  playerdock.ui  playerdocktitle.ui  pluginconfig.ui  recorderplugins.ui  settings.ui  shortcutsconfig.ui  sizewidget.ui  snoopdialog.ui  timeline.ui  timelineconfig.ui  timelinetopics.ui  timerwidget.ui  toolbarwidget.ui  videoplayer.ui  zoom.ui  zoomdock.ui  zoomdocktitlewidget.ui
src/upload/: accountpage.cpp  accountpage.h  kipipage.cpp  kipipage.h  pluginpage.cpp  pluginpage.h  uploadpage.cpp  uploadpage.h  uploadwizard.cpp  uploadwizard.h  videopage.cpp  videopage.h
src/widgets/: checkicon.cpp  checkicon.h  collectionitemdelegate.cpp  collectionitemdelegate.h  collectionitemdelegate_p.h  collectionitemdialog.cpp  collectionitemdialog.h  collectionitemdialog_p.h  collectionlistmodel.cpp  collectionlistmodel_p.h  collectionlistsearchwidget.cpp  collectionlistsearchwidget.h  collectionlistsearchwidget_p.h  collectionlistwidget.cpp  collectionlistwidget.h  collectionlistwidget_p.h  collectionlistwidgetitem.cpp  collectionlistwidgetitem.h  collectionlistwidgetitem_p.h  collectionview.cpp  collectionview.h  collectionview_p.h  listwidgetbuttoncontainer.cpp  listwidgetbuttoncontainer_p.h  osd.cpp  osd.h  recordhelpwidget.cpp  recordhelpwidget.h
src/zoom/: zoomdock.cpp  zoomdock.h  zoomview.cpp  zoomview.h
(+203 files in other folders)
